<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NestMusic</string>

    <!-- Pantalla inicio -->
    <string name="btn_registro">REGISTRO</string>
    <string name="btn_ingresar">INICIAR SESIÓN</string>
    <string name="btn_continuarSinRegistro">CONTINUAR SIN REGISTRO</string>
    <string name="btn_solcitarValidacion">SOLICITAR VALIDACIÓN REGISTRO</string>
    <string name="lbl_mensajeBienvenido">Bienvenido a Nest Music</string>
    <!-- Fin pantalla inicio -->


    <!-- Pantalla registro -->
    <string name="et_usuario">Usuario</string>
    <string name="et_password">Contraseña</string>
    <string name="et_nombre">Nombre</string>
    <string name="et_apellidos">Apellidos</string>
    <string name="et_email">Email</string>
    <string name="et_fechaNacimiento">Fecha nacimiento</string>
    <string name="lb_mensajeDatosAcceso">Datos de acesso</string>
    <string name="lb_mensajeDatosPersonales">Datos personales</string>
    <string name="btn_continuar">REGISTRARSE</string>
    <!-- FIn pantalla registro -->


    <!-- Pantalla login -->
    <string name="btn_login">INICIAR SESIÓN</string>
    <string name="btn_recuperarPass">¿Olvidó su contraseña?</string>
    <!-- Fin Pantalla login -->


    <!-- Pantalla recuperar datos -->
    <string name="btn_recuperarDatos">ENVIAR DATOS</string>
    <!-- Fin pantalla recuperar datos -->


    <!-- Pantalla solicitar validacion -->
    <string name="lb_solicitarValidacion">Por favor ingrese el nombre de usuario que registró, se enviará un correo para validar su registro.</string>
    <!-- Fin pantalla solicitar validacion -->


    <!-- Titulos de vistas -->
    <string name="title_activity_registro">REGISTRO</string>
    <string name="title_activity_ingreso">INICIAR SESIÓN</string>
    <string name="title_activity_recuperar_password">RECUPERAR CONTRASEÑA</string>
    <string name="title_activity_solicitar_validacion">SOLICITAR VALIDACIÓN</string>
    <string name="title_activity_home">INICIO</string>
    <!-- Fin titulos de vistas -->


    <!-- Mensajea -->
    <string name="error_recurso">Error al reproducir, recurso no disponible.</string>
    <string name="error_conexion">Error de conexión.</string>
    <string name="error_servidor">No se puede conectar con el servidor.</string>
    <string name="error_datos">Error al recibir los datos.</string>
    <string name="email_validacion_enviado">Correo de validación enviado.</string>
    <string name="email_recuperar_pass">Datos enviados al correo.</string>
    <string name="cargando">Cargando…</string>
    <string name="guardando">Guardando…</string>
    <string name="eliminando">Eliminando…</string>
    <string name="usuario_creado">"Usuario creado exitosamente."</string>
    <string name="titulo_dialog_info">Información</string>
    <string name="mensaje_registro">Usuario creado exitosamente. Se envió un enlace a su correo electrónico, por favor de validar su registro.</string>
    <string name="cerrar_sesion">¿Esta seguro de terminar la sesión?</string>
    <string name="cerrar_app">¿Esta seguro de cerrar la aplicación?</string>
    <string name="cerrar_sesion_titulo">Cerrar sesión</string>
    <string name="cerrar_app_titulo">Cerrar aplicación</string>
    <string name="icono_menu">Icono</string>
    <string name="icono_recargar">Recargar</string>
    <string name="sin_coincidencias">No se encontrarón coincidencias.</string>
    <string name="sin_favoritos">No tienes ninguna canción en favoritos, intente agregar alguno.</string>
    <string name="sin_lista_reproduccion">No tienes ninguna lista de reproducción, intente crear uno.</string>
    <string name="sin_historial_reprod">No tienes ninguna canción en historial.</string>
    <string name="sin_historial_descarga">No tienes historial de descarga.</string>
    <string name="filtro_favorito">Buscar en favoritos…</string>
    <string name="filtro_mi_musica">Buscar en mi música…</string>
    <string name="artista_desconocido">Artista desconocido.</string>
    <string name="duracion_cancion">Duración:</string>
    <string name="desconocido">desconocido.</string>
    <string name="mensaje_inicio">Empiece buscando…</string>
    <string name="mensaje_no_sesion">Debe iniciar sesión para usar ésta función.</string>
    <string name="fecha_creacion">Fecha de creación:</string>
    <string name="titulo_nueva_lista_reprod">Nueva lista</string>
    <string name="titulo_editar_lista_reprod">Editar lista</string>
    <string name="mensaje_nueva_lista_reprod">Agregar lista de reproducción.</string>
    <string name="mensaje_editar_lista_reprod">Editar nombre lista reproducción.</string>
    <string name="seleccionado">seleccionado</string>
    <string name="error_leer_sd_externo">Error al obtener lista de música en EXTERNAL SD CARD.</string>
    <string name="reproduciendo">Reproduciendo</string>
    <string name="pausado">Pausado</string>
    <!-- Fin mensajes -->


    <!-- Elementos del menu lateral -->
    <string name="menu_inicio">Inicio</string>
    <string name="menu_mi_musica">Mi Música</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_lista_Rep">Lista reproducción</string>
    <string name="menu_historial_Rep">Historial reproducción</string>
    <string name="menu_historial_descargas">Historial descargas</string>
    <string name="menu_descargas">Descargas</string>
    <string name="menu_fin_sesion">Cerrar sesión</string>
    <!-- Fin elelementos del menu lateral -->

    <!-- Elementos del menu principal -->
    <string name="action_settings">Configurar</string>
    <string name="action_salir">Salir</string>
    <string name="action_busqueda">Busqueda</string>
    <string name="action_eliminar">Eliminar</string>
    <string name="action_editar">Editar</string>
    <!-- Fin -->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
