<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.rhcloud.app_nestmusic.nestmusic.HomeActivity">

    <item android:id="@+id/action_busqueda"
        android:title="@string/action_busqueda"
        android:icon="@android:drawable/ic_menu_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:actionViewClass="android.widget.SearchView" />

    <item android:id="@+id/action_agregar"
        android:visible="false"
        android:icon="@android:drawable/ic_menu_add"
        android:showAsAction="withText|ifRoom"/>

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />

    <item android:id="@+id/action_salir"
        android:title="@string/action_salir"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
