<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#a6717171"
    tools:context="com.rhcloud.app_nestmusic.nestmusic.Registro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_mensajeDatosAcceso"
        android:id="@+id/id_mensajeDatosAcceso"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:paddingTop="15dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/id_mensajeDatosAcceso"
        android:layout_alignParentLeft="true"
        android:paddingTop="10dp"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/et_usuario"
                android:layout_weight="0.5"
                android:hint="@string/et_usuario"
                android:inputType="text" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/et_password"
                android:layout_weight="0.5"
                android:hint="@string/et_password" />
        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_mensajeDatosPersonales"
        android:id="@+id/textView2"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:paddingTop="25dp"
        android:textSize="20sp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:paddingTop="15dp"
        android:id="@+id/linearLayout2">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:id="@+id/et_nombre"
            android:layout_gravity="center_horizontal"
            android:hint="@string/et_nombre"
            android:paddingBottom="20dp"
            android:ems="10" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/et_apellidos"
            android:layout_gravity="center_horizontal"
            android:hint="@string/et_apellidos"
            android:paddingBottom="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/et_corre"
            android:layout_gravity="center_horizontal"
            android:hint="@string/et_email"
            android:paddingBottom="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/et_fechaNac"
            android:layout_gravity="center_horizontal"
            android:hint="@string/et_fechaNacimiento"
            android:paddingBottom="20dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:paddingTop="20dp"
        android:layout_marginTop="30dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_limpiar"
            android:id="@+id/btn_limpiar"
            android:background="@drawable/boton_bg"
            android:layout_weight="0.4"
            android:layout_marginRight="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_continuar"
            android:id="@+id/btn_continuar"
            android:background="@drawable/boton_bg"
            android:layout_weight="0.4"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

</RelativeLayout>
