<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#a6717171"
    android:weightSum="1">

    <TextView
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_mensajeBienvenido"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:gravity="center" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.79"
        android:id="@+id/frameLogin"></FrameLayout>

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_registro"
        android:id="@+id/btn_registro"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/boton_bg"
        android:layout_marginBottom="10dp"
        android:onClick="registroOnClick" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_ingresar"
        android:id="@+id/btn_ingreso"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/boton_bg"
        android:layout_marginBottom="10dp"
        android:onClick="ingresoOnClick" />

    <Button
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_continuarSinRegistro"
        android:id="@+id/btn_continuar"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/transparent"
        android:layout_marginBottom="10dp" />

</LinearLayout>
