<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.rhcloud.app_nestmusic.nestmusic.Ingreso"
    android:background="#a6717171">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lb_mensajeDatosAcceso"
        android:id="@+id/textView3"
        android:textSize="25sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_usuario"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="33dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingBottom="15dp"
        android:hint="@string/et_usuario" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_password"
        android:layout_below="@+id/et_usuario"
        android:layout_alignRight="@+id/et_usuario"
        android:layout_alignEnd="@+id/et_usuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:paddingTop="15dp"
        android:hint="@string/et_password"
        android:inputType="textPassword" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true"
        android:paddingTop="40dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_limpiar"
            android:id="@+id/btn_limpiar"
            android:layout_weight="0.4"
            android:background="@drawable/boton_bg"
            android:layout_marginRight="5dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_continuar"
            android:id="@+id/btn_continuar"
            android:layout_weight="0.4"
            android:background="@drawable/boton_bg"
            android:layout_marginLeft="5dp" />
    </LinearLayout>
</RelativeLayout>
