<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.rhcloud.app_nestmusic.nestmusic.SolicitarValidacionActivity"
    android:background="@color/fondo_pantallas">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lb_solicitarValidacion"
        android:id="@+id/tv_solicitarValidacion"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="10dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_usuario"
        android:layout_below="@id/tv_solicitarValidacion"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/et_usuario" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="@dimen/alto_boton"
        android:text="@string/btn_solcitarValidacion"
        android:id="@+id/btn_solicitarValidacion"
        android:layout_below="@+id/et_usuario"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/boton_bg"
        android:onClick="solicitarValidacion"/>

</RelativeLayout>
